--- a/credentials.yml
+++ b/credentials.yml
@@ -6,11 +6,20 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 
+#slack:
+#  slack_token: "<your slack token>"
+#  slack_channel: "<the slack channel>"
+#  slack_signing_secret: "<your slack signing secret>"
 
 #facebook:
 #  verify: "<verify>"
 #  secret: "<your secret>"
 #  page-access-token: "<your page access token>"
+
+# telegram:
+#   access_token: "490161424:AAGlRxinBRtKGb21_rlOEMtDFZMXBl6EC0o"
+#   verify: "your_bot"
+#   webhook_url: "https://ab18-197-232-61-250.ngrok.io/webhooks/telegram/webhook"
 
 socketio:
   user_message_evt: user_uttered
