--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,6 +1,10 @@
 version: "3.1"
 
 nlu:
+- intent: ask_me_anything
+  examples: |
+    - ask me questions
+    - I wanna know
 - intent: greet
   examples: |
     - hey
@@ -89,3 +93,11 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+    
+
+- intent: request_names
+  examples: |
+    - i want to give you my name
+    - give name
+    - you need to know my name
+    - do you know my name?
