--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,6 +1,21 @@
 version: "3.1"
 
 rules:
+# - rule: Activate form
+#   steps:
+#   - intent: ask_me_anything
+#   - action: shirt_size_form
+#   - active_loop: shirt_size_form
+
+# - rule: Submit form
+#   condition:
+#   - active_loop: shirt_size_form
+#   steps:
+#   - action: shirt_size_form
+#   - active_loop: null
+#   - slot_was_set:
+#     - requested_slot: null
+#   - action: utter_remember
 
 - rule: Say goodbye anytime the user says goodbye
   steps:
@@ -11,3 +26,19 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+- rule: Activate form
+  steps:
+  - intent: request_names
+  - action: name_form
+  - active_loop: name_form
+
+- rule: Submit form
+  condition:
+  - active_loop: name_form
+  steps:
+  - action: name_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: utter_submit
+  - action: utter_slots_values
