--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,34 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
+  - ask_me_anything
+  - request_names
+# actions:
+# - utter_greet
+# - utter_slots_values
+# - utter_submit
+forms:
+  name_form:
+    required_slots:
+      - first_name
+      - last_name
+slots:
+  first_name:
+    type: text
+    influence_conversation: true
+    mappings:
+      - type: from_text
+        conditions:
+         - active_loop: name_form
+           requested_slot: first_name
+  last_name:
+    type: text
+    influence_conversation: true
+    mappings:
+      - type: from_text
+        conditions:
+         - active_loop: name_form
+           requested_slot: last_name
 
 responses:
   utter_greet:
@@ -28,6 +56,16 @@ responses:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
+  utter_remember:
+  - text: "Yes hello world."
+  utter_ask_first_name:
+  - text: What is your first name?
+  utter_ask_last_name:
+  - text: So {first_name}, what is your last name?
+  utter_submit:
+  - text: Ok. Thanks!
+  utter_slots_values:
+  - text: I will remember that your name is {first_name} {last_name}!
 
 session_config:
   session_expiration_time: 60
