updates on python code

--- a/data/rules.yml
+++ b/data/rules.yml
@@ -41,4 +41,5 @@ rules:
   - slot_was_set:
     - requested_slot: null
   - action: utter_submit
-  - action: utter_slots_values
+  - action: action_search_cart
+  # - action: utter_slots_values
