--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,10 +1,32 @@
 version: "3.1"
 
 nlu:
+- synonym: credit
+  examples: |
+    - credit card account
+    - credit account
+
+- lookup: country
+  examples: |
+    - Afghanistan
+    - Albania
+    - Kenya
+    - Zambia
+    - Zimbabwe
+
+
 - intent: ask_me_anything
   examples: |
     - ask me questions
     - I wanna know
+- intent: by_product
+  examples: |
+    - I want to buy[hp laptop](product) 
+    - I want to order [laptop](product)
+    - order [phone](product)
+    - do you have [clothes](product)
+    - can I order [mobile phone](product) in your shop
+    - shop [macbook](product) 
    
 - intent: greet
   examples: |
