--- a/domain.yml
+++ b/domain.yml
@@ -1,33 +1,32 @@
-version: "3.1"
-
+version: '3.1'
 intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
-  - ask_me_anything
-  - request_names
-  - by_product
-  - get_started
+- affirm
+- ask_me_anything
+- bot_challenge
+- by_product
+- deny
+- get_started
+- goodbye
+- greet
+- human_operator
+- mood_great
+- mood_unhappy
+- request_names
+- stop
 actions:
-- action_search_cart
 - action_buy_product
-# - utter_slots_values
-# - utter_submit
+- action_search_cart
+- validate_name_form
 entities:
 - product
 forms:
   name_form:
     required_slots:
-      - first_name
-      - last_name
+    - first_name
+    - last_name
   product_form:
     required_slots:
-      - product
-      
+    - product
 slots:
   product:
     type: text
@@ -35,68 +34,63 @@ slots:
     mappings:
     - type: from_entity
       entity: product
-
-  
   first_name:
     type: text
     influence_conversation: true
     mappings:
-      - type: from_text
-        conditions:
-         - active_loop: name_form
-           requested_slot: first_name
+    - type: from_text
+      conditions:
+      - active_loop: name_form
+        requested_slot: first_name
   last_name:
     type: text
     influence_conversation: true
     mappings:
-      - type: from_text
-        conditions:
-         - active_loop: name_form
-           requested_slot: last_name
-
+    - type: from_text
+      conditions:
+      - active_loop: name_form
+        requested_slot: last_name
 responses:
   utter_greet:
-  - text: "Hey! How are you? What can I help you with?"
+  - text: Hey! How are you? What can I help you with?
   utter_ask_product:
-  - text: "What do you want to buy"
-
+  - text: What do you want to buy
   utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
+  - text: 'Here is something to cheer you up:'
+    image: https://i.imgur.com/nGF1K8f.jpg
   utter_did_that_help:
-  - text: "Did that help you?"
-
+  - text: Did that help you?
   utter_happy:
-  - text: "Great, carry on!"
-
+  - text: Great, carry on!
   utter_goodbye:
-  - text: "Bye"
+  - text: Bye
   utter_buy:
-  - text: "Thanks for purchasing"
-
+  - text: Thanks for purchasing
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  - text: I am a bot, powered by Rasa.
   utter_remember:
-  - text: "Yes hello world."
+  - text: Yes hello world.
   utter_ask_first_name:
   - text: What is your Email address?
   utter_ask_last_name:
-  - text: Your email is {first_name}, what is your Password?
+  - text: Your email is {first_name}, what is your First name?
   utter_submit:
   - text: Processing....
   utter_slots_values:
   - text: I will remember that your name is {first_name} {last_name}!
+  utter_human_operator:
+  - text: Human operators are available Monday to friday from 8 am to 4 PM.
+  utter_human_link:
+  - text: click here http://65.108.243.249/human.html
   utter_get_started:
-  - text: "What can I help you with"
+  - text: What can I help you with
     buttons:
-    - title: "Shopping"
-      payload: "/by_product"
-    - title: "checkout Link"
-      payload: "/request_names"
-    - title: "other"
-      payload: "/greet"
-
+    - title: Shopping
+      payload: /by_product
+    - title: checkout Link
+      payload: /request_names
+    - title: other
+      payload: /greet
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
