--- a/data/stories.yml
+++ b/data/stories.yml
@@ -57,3 +57,51 @@ stories:
   steps:
   - intent: get_started
   - action: utter_get_started
+- story: Link to human operator
+  steps:
+  - intent: human_operator
+  - action: utter_human_operator
+  - action: utter_human_link
+
+- story: User interrupts the form and doesn't want to continue
+  steps:
+  - intent: request_names
+  - action: name_form
+  - active_loop: name_form
+  - intent: stop
+  # - action: utter_ask_continue
+  # - intent: stop
+  - action: action_deactivate_loop
+  - active_loop: null
+
+- story: interactive_story_1
+  steps:
+  - intent: request_names
+  - action: name_form
+  - active_loop: name_form
+  - intent: stop
+  - action: action_deactivate_loop
+  # - slot_was_set:
+  #   - requested_slot: first_name
+  # - intent: stop
+  # - slot_was_set:
+  #   - first_name: stop
+  # - action: action_deactivate_loop
+  # - active_loop: null
+  # - slot_was_set:
+  #   - requested_slot: null
+
+- story: form intteruption
+  steps:
+  - intent: request_names
+  - action: name_form
+  - active_loop: name_form
+  - slot_was_set:
+    - requested_slot: first_name
+  - intent: stop
+  - slot_was_set:
+    - first_name: stop
+  - action: action_deactivate_loop
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
