--- a/credentials.yml
+++ b/credentials.yml
@@ -10,6 +10,10 @@ rest:
 #  slack_token: "<your slack token>"
 #  slack_channel: "<the slack channel>"
 #  slack_signing_secret: "<your slack signing secret>"
+telegram:
+  access_token: "5329524468:AAF9vhRouEqb8g4ba7u7lhZhrCUn7OKlYGo"
+  verify: "rasashop_bot"
+  webhook_url: "https://https://rasa-com.roycesurvey.co.ke/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
