--- a/credentials.yml
+++ b/credentials.yml
@@ -15,7 +15,7 @@ rest:
 telegram:
   access_token: "5329524468:AAF9vhRouEqb8g4ba7u7lhZhrCUn7OKlYGo"
   verify: "rasashop_bot"
-  webhook_url: "https://https://rasa-com.roycesurvey.co.ke/webhooks/telegram/webhook"
+  webhook_url: "https://rasa-com.roycesurvey.co.ke/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
